// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package model.service.v1;

// NOTE: 最后请删除这些无用的注释 (゜-゜)つロ

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service ModelSvc {
    rpc HdlModelURL(GrpcReqs) returns (GrpcResp) {
        option (google.api.http) = {
            post:"/backend/api/v1/models"
            body: "*"
        };
    };
}

message Model {
    string name = 1;
}

message GrpcReqs {
    string version = 1;
    string method = 2;
    string table = 3;
    string condition = 4;
    repeated string arguments = 5;
}

message GrpcResp {
    repeated Model result = 1;
}